# Fastapi_tips

async_routes/: pyproject.toml
async_routes/src/async_routes/: router.py
dependency_inj/: pyproject.toml
dependency_inj/src/dependency_inj/: main.py  router.py  service.py
pydantic/: pyproject.toml
pydantic/src/pydantic/: base_settings.py  validation.py
