[project]
name = "dependency-inj"
version = "0.1.0"
description = ""
authors = [
    {name = "smandalsid",email = "smandal.sid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "dependency_inj", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
